# cpp_template

./: A.cpp  A.h  CMakeLists.txt  CMakePresets.json  main.cpp  test.cpp
